--- a/app/src/main/res/layout/activity_received.xml
+++ b/app/src/main/res/layout/activity_received.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Nút quay lại -->
     <ImageButton
         android:id="@+id/backButton"
         android:layout_width="25dp"
@@ -13,40 +15,73 @@
         android:background="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_left" />
+        app:srcCompat="@drawable/circle_arrow_left_solid" />
 
+    <!-- Tiêu đề -->
     <TextView
-        android:id="@+id/name"
-        android:layout_width="0dp"
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Người gửi:"
-        android:textSize="16sp"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/comicrelief_bold"
+        android:text="Nhận tin nhắn"
+        android:textColor="#336600"
+        android:textSize="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/username"
+    <!-- LinearLayout chứa các TextView -->
+    <LinearLayout
+        android:id="@+id/textGroup"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Người nhận:"
-        android:textSize="16sp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintTop_toBottomOf="@id/name"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.5">
 
-    <TextView
-        android:id="@+id/received"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Nội dung:"
-        android:textSize="16sp"
-        android:layout_margin="16dp"
-        android:padding="8dp"
-        android:background="#EEEEEE"
-        app:layout_constraintTop_toBottomOf="@id/username"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <!-- Người gửi -->
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edittext_background"
+            android:gravity="center_vertical|start"
+            android:paddingStart="8dp"
+            android:text="Người gửi"
+            android:textSize="16sp" />
+
+        <!-- Người nhận -->
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/edittext_background"
+            android:gravity="center_vertical|start"
+            android:paddingStart="8dp"
+            android:text="Người nhận"
+            android:textSize="16sp" />
+
+        <!-- Nội dung -->
+        <TextView
+            android:id="@+id/received"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/edittext_background"
+            android:gravity="center_vertical|start"
+            android:paddingStart="8dp"
+            android:text="Nội dung"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
