--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -2,14 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- Bo tròn góc -->
-    <corners android:radius="8dp" />
+    <corners android:radius="2dp" />
 
-    <!-- Viền màu đen -->
     <stroke
         android:width="2.5dp"
-        android:color="@color/colorPrimary" />
+        android:color="#336600" />
 
-    <!-- Nền trắng -->
     <solid android:color="#FFFFFF" />
 </shape>
