--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:fontFamily="serif"
         android:gravity="center"
         android:text="Đăng nhập"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#336600"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
 
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_width="270dp"
+        android:layout_width="290dp"
         android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/edittext_background"
@@ -52,7 +52,7 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="270dp"
+        android:layout_width="290dp"
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/edittext_background"
@@ -71,8 +71,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Continue with"
+        android:textColor="#336600"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
         app:layout_constraintHorizontal_bias="0.459"
@@ -83,7 +84,7 @@
         android:id="@+id/button3"
         android:layout_width="77dp"
         android:layout_height="77dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/ic_fb"
         android:text=""
@@ -94,7 +95,7 @@
         android:id="@+id/button2"
         android:layout_width="77dp"
         android:layout_height="77dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/ic_gg"
         android:text=""
         app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
@@ -104,7 +105,7 @@
         android:id="@+id/button23"
         android:layout_width="77dp"
         android:layout_height="77dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/ic_git"
         android:text=""
@@ -126,7 +127,7 @@
         android:id="@+id/donthaveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="serif"
         android:text="Bạn chưa có tài khoản?"
