--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -39,16 +39,19 @@
         android:layout_height="403dp"
         android:src="@drawable/logo__2_"
         tools:layout_editor_absoluteX="-37dp"
-        tools:layout_editor_absoluteY="-10dp" />
+        tools:layout_editor_absoluteY="-23dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/next"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="126dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/edittextshape"
         android:text="Tiếp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
