--- a/app/src/main/res/layout/activity_test_fragment.xml
+++ b/app/src/main/res/layout/activity_test_fragment.xml
@@ -11,32 +11,11 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:navGraph="@navigation/nav_graph"
         app:defaultNavHost="true"
-        app:layout_constraintTop_toBottomOf="@id/marqueeText"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-
-
-
-    <TextView
-        android:id="@+id/marqueeText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:scrollHorizontally="true"
-        android:text="🍜 Ưu đãi đặc biệt hôm nay: Mua 1 tặng 1 tất cả món Phở! 🍜"
-        android:textSize="16sp"
-        android:textColor="#FF5722"
-        android:background="#FFFDE7"
-        android:padding="8dp"
-        android:textStyle="bold" />
+        app:navGraph="@navigation/nav_graph" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
