--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,10 +9,15 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:text="search"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/comicrelief_bold"
+        android:text="Tìm kiếm"
+        android:textColor="#336600"
+        android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <androidx.appcompat.widget.SearchView
@@ -20,6 +25,7 @@
         android:layout_width="389dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="12dp"
         android:background="@drawable/editsearch"
         android:iconifiedByDefault="false"
@@ -27,7 +33,7 @@
         android:queryHint="Bạn muốn tìm kiếm gì?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/text"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -45,6 +51,7 @@
         android:id="@+id/menuRecycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
         tools:listitem="@layout/menu_item" />
