--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,17 +3,20 @@
     <item
         android:id="@+id/homeFragment"
         android:title="Home"
-        android:icon="@drawable/home" />
+        android:icon="@drawable/home"
+        android:textColor="@color/colorPrimary"/>
 
     <item
         android:id="@+id/cardFragment"
         android:title="Card"
-        android:icon="@drawable/card" />
+        android:icon="@drawable/cart" />
 
     <item
         android:id="@+id/searchFragment"
         android:title="Search"
-        android:icon="@drawable/search" />
+        android:icon="@drawable/search"
+        android:textColor="@color/colorPrimary"/>
+
 
     <item
         android:id="@+id/historyFragment"
