feat: display user orders with RecyclerView

--- a/app/src/main/res/layout/activity_pay_out.xml
+++ b/app/src/main/res/layout/activity_pay_out.xml
@@ -307,7 +307,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingLeft="8dp"
-                android:text="Số lượng"
+                android:text="Tổng tiên"
                 android:textColor="#000000" />
 
             <EditText
