--- a/app/src/main/res/layout/buy_again_item.xml
+++ b/app/src/main/res/layout/buy_again_item.xml
@@ -1,74 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:padding="8dp">
 
+            <!-- Ảnh đại diện đơn hàng -->
             <ImageView
                 android:id="@+id/BuyAgainFoodImage"
                 android:layout_width="70dp"
                 android:layout_height="72dp"
-                android:layout_marginStart="8dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/menu1"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
-            <TextView
-                android:id="@+id/BuyAgainFoodName"
-                android:layout_width="wrap_content"
+            <!-- Danh sách món hiển thị tại đây -->
+            <LinearLayout
+                android:id="@+id/orderItemsLayout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="FoodName"
-                app:layout_constraintBottom_toTopOf="@+id/BuyAgainFoodPrice"
-                app:layout_constraintStart_toEndOf="@+id/BuyAgainFoodImage"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/BuyAgainFoodPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$5"
-                android:textColor="#336600"
+                android:orientation="vertical"
+                android:paddingStart="8dp"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/BuyAgainFoodName"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/BuyAgainFoodName"
-                app:layout_constraintTop_toBottomOf="@+id/BuyAgainFoodName" />
+                app:layout_constraintStart_toEndOf="@id/BuyAgainFoodImage"
+                app:layout_constraintEnd_toStartOf="@+id/BuyAgainFoodButton" />
 
+            <!-- Nút mua lại -->
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BuyAgainFoodButton"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="32dp"
-                android:background="@drawable/edittextshape"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
                 android:text="Mua lại"
-                android:textAllCaps="false"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textAllCaps="false"
+                android:background="@drawable/edittextshape"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="8dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
