--- a/app/src/main/res/layout/chat_ai.xml
+++ b/app/src/main/res/layout/chat_ai.xml
@@ -1,13 +1,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="64dp"
+        android:layout_height="65dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
@@ -38,24 +39,24 @@
 
         <EditText
             android:id="@+id/userInput"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Nhập tin nhắn..."
-            android:background="@drawable/edittextshape"
-            android:padding="8dp"
+            android:layout_width="298dp"
+            android:layout_height="72dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/edittextshape"
+            android:hint="Nhập tin nhắn..."
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/sendButton"/>
+            app:layout_constraintEnd_toStartOf="@+id/sendButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="81dp"
+            android:layout_height="70dp"
             android:text="Gửi"
-            app:layout_constraintTop_toTopOf="@id/userInput"
             app:layout_constraintBottom_toBottomOf="@id/userInput"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/userInput" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
